unused/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: networking
spec:
  selector:
    app: pihole
  ports:
  - name: dns-tcp
    port: 53
    protocol: TCP
  - name: dns-udp
    port: 53
    protocol: UDP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: networking
spec:
  selector:
    app: pihole
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
